<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/primer_plato"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_primerPlato" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group_primero">

            <RadioButton
                android:text="@string/macarrones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_macarrones"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:text="@string/sopa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_sopa"
                android:layout_weight="1" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/segundo_plato"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_segundoPlato" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group_segundo">

            <RadioButton
                android:text="@string/paella"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_paella"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:text="@string/atun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_atun"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/choco_frito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_choco"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/postre"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_postre" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group_postre">

            <RadioButton
                android:text="@string/arroz_con_leche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_arroz"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:text="@string/tocino_de_cielo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_tocino"
                android:layout_weight="1" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:text="@string/enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_enviar" />

</LinearLayout>