<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/vino"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_vino"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_vinos"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/capacidad"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_capacidad"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_contenido"
            android:layout_weight="1" >

            <RadioButton
                android:text="@string/_250_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_chico"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/_500_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_mediano"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/_750_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_grande"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/_1_litro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_maxi"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Nº Comensales"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_comensales"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText_numeroComensales"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/pedir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_pedir" />

    <TextView
        android:text=""
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_resultado"
        android:textAlignment="center" />

</LinearLayout>